--- a/paper/jxml.tex
+++ b/paper/jxml.tex
@@ -38,21 +38,22 @@
 For the fifth lab in Design of Programming Languages, we were asked to
 write a program to translate JSON to XML.  To do this, we used a
 scanning and parsing system called SLLGEN which was created by one of
-the two books for the class, Essentials of Programming Languages.\cite[pg.379]{eopl}
-Written in Scheme, SLLGEN uses macros to turn regular expressions and
-grammars represented in Scheme into lexers and parsers.  Though SLLGEN
-works, the error reporting leaves a lot to be desired, and I was
-interested in writing a lexer and parser in more industry-standard
-tools.  I've written a lexer, parser, and interpreter using Flex and
-Bison, two open-source and industry-standard tools.  This paper aims
-to explore the differences between writing a scanner and parser in
-SLLGEN vs. in Flex and Bison.  I will explore the choices languages
-and tools make when writing metaprograms.
+the two books for the class, Essentials of Programming
+Languages.\cite[pg. 379]{eopl} Written in Scheme, SLLGEN uses macros
+to turn Scheme representations of regular expressions and grammars
+into lexers and parsers.  Though SLLGEN works, the error reporting
+leaves a lot to be desired, and I was interested in writing a lexer
+and parser using more industry-standard tools.  I've written a lexer,
+parser, and interpreter using Flex and Bison, two open-source and
+industry-standard tools.  This paper aims to explore the differences
+between writing a scanner and parser in SLLGEN vs. in Flex+Bison.  I
+will explore the importance of language and tool choice when writing
+metaprograms.
 \section{Comparison}
 \subsection{Language Differences}
 Since JSON is a relatively simple language to lex and parse, the
 largest difference between using SLLGEN and Flex+Bison was the
-language \textit{they} are implemented in.  SLLGEN is written in
+language the \textit{tools} were implemented in.  SLLGEN is written in
 Scheme, whereas Flex and Bison are written in C.  This gives a
 significant advantage to SLLGEN for those looking to program quickly,
 as the time necessary to write a JSON to XML translator after the
@@ -62,9 +63,8 @@ be better served using SLLGEN--even simply lexing JSON in C requires
 memory management to handle JSON strings.
 \subsection{SLLGEN vs. Flex: Lexing}
 The implementation of the lexer in Flex and SLLGEN is relatively
-similar---both take a list of regular expressions, along with what
-token corresponds to the appropriate regular expression.
-In Flex, this matches a JSON number:
+similar---both take a list of regular expressions and their
+corresponding tokens.  In Flex, this matches a JSON number:
 \begin{lstlisting}
   -?[0-9]*\.?[0-9]+([eE][-+]?[0-9]+)?
   { yylval.NUM = atof (yytext); return NUM; }
@@ -77,23 +77,23 @@ And this is part of the code to do the same using SLLGEN:
           ... number)
 \end{lstlisting}
 \par
-Though regular expressions are represented using Scheme functions,
-they work fundamentally the same way.  Flex gives a bit more power
-when creating tokens--we can decide what, if any, value we want the
-token to have (yylval).  The real advantage to using Flex over SLLGEN
-came when parsing JSON strings.  The specification for JSON strings
-states that a JSON string is a quote, followed by anything until
-another quote is reached, with control characters
+Though regular expressions in SLLGEN are represented using Scheme
+functions, they work fundamentally the same way.  Flex gives a bit
+more power when creating tokens--we can decide what, if any, value we
+want the token to have (yylval).  The real advantage to using Flex
+over SLLGEN came when parsing JSON strings.  The specification for
+JSON strings states that a JSON string is a quote, followed by
+anything until another quote is reached, with control characters
 escaped.\footnote{Appendix A contains the JSON string specification.}
 The notion of ``any non-quote character'' turns out to be impossible
 to represent using SLLGEN.  Flex solves problems like this by using
-the concept of \textit{start conditions}.\cite[10]{flex}  A start condition causes
-the lexer to enter a state when it matches a particular rule, and only
-exit the state when an end rule is matched.  Using an exclusive start
-condition, the lexer will not attempt to match any rules except for
-those intended to be matched inside the start condition---for example,
-control characters in a JSON string.\footnote{See json\_xml.l, lines
-  23-84.}\par
+the concept of \textit{start conditions}.\cite[10]{flex} A start
+condition causes the lexer to enter a state when it matches a
+particular rule and only exit the state when an end rule is matched.
+Using an exclusive start condition, the lexer will not attempt to
+match any rules except for those intended to be matched inside the
+start condition---for example, control characters in a JSON
+string.\footnote{See json\_xml.l, lines 23-84.}\par
 Flex is more powerful than the SLLGEN equivalent, though this power
 comes at the expense of complexity.  Flex can ultimately lex more
 complexly and with more options than SLLGEN.  The trade-off is worth
@@ -138,7 +138,7 @@ The Bison parser can have a \textit{semantic action} for every
 syntactic rule.\cite[3.4.6]{bison}  This is what allows the
 parser to do more than run and say if the input is valid or not--it
 allows you to construct the parse tree for use in a compiler or
-interpreter, or in the case of the JSON to XML translator, simply
+interpreter, or in the case of my JSON to XML translator, simply
 translate as the parse tree is constructed.\footnote{This merging of
   the JSON to XML interpreter and the parser is not typical in Bison.
   A parse tree could have been constructed and processed later, but
@@ -162,47 +162,56 @@ tags for every item in a list:
 \end{lstlisting}
 Writing the JSON to XML interpreter in C is more time consuming than
 writing it in Scheme, though it is made easier by combining it with
-the Bison generated parser.  Even with this time reduction, it is
-still far faster to write the interpreter in a language that so
-naturally handles recursion and has automatic memory management.
+the Bison generated parser.  Even with this merge, it is still far
+faster to write the interpreter in a language that so naturally
+handles recursion and has automatic memory management.
 \section{Conclusion}
 The languages and tools we use to write programs have a direct impact
 on our efficacy as programmers, and on the possible properties of our
-programs.  This is more true than normal when writing
-metaprograms.\par
+programs.  This is even more true when writing metaprograms.\par
 The complexity of metaprograms makes having tools that are easy to
 understand and which promote correct code essential.  After
 implementing a JSON to XML interpreter in both Scheme using SLLGEN and
 in C using Flex+Bison, it is clear that Flex+Bison are the better
-tools for larger projects.  Flex's scanner simply allows the
-programmer to do more than SLLGEN's does.  Bison is far more explicit
-and powerful than SLLGEN's parser generator.\par
+tools for larger projects.  Flex simply allows the programmer to do
+more than SLLGEN's lexer.  Bison is far more explicit and powerful
+than SLLGEN's parser generator.\par
 Despite these advantages for larger projects, the implementation
 language of our metaprogramming contestants comes into question for a
 small project such as this.  Even while being comfortable in both C
 and Scheme, writing an interpreter in C simply takes more time, and
 can produce far more errors.  When a programmer wants to spend a
 couple hours writing a simple interpreter, SLLGEN is a better fit,
-simply because it comes with Scheme.
+simply because it comes with Scheme.\par
+Writing my JSON to XML interpreter using Flex+Bison was fun, but it
+also clearly highlights the difference that language and tool design
+can make to end-user programmers.
 \section{Tests}
 Testing for the program was composed of two main parts: testing
-correctness of JSON to XML translation, and test memory management.
-The program correctly translates JSON to XML, with a couple of
-exceptions that I did not want to implement:
+correctness of JSON object to XML tag translation, and testing memory
+management.  The program correctly translates JSON to XML, with a
+couple of exceptions that I did not want to implement:
 \begin{itemize}
 \item There is no Unicode support.
 \item JSON object names are not camel cased when translated to XML tags.
+\item If the JSON data type is not enclosed in an object it is not
+  converted to accurate XML.  There seems to be no real standard for
+  converting JSON not enclosed in objects to XML.
 \end{itemize}
-Tests can be found in the file jxml\_tests.\par
+Tests can be found in the tests directory.\par
 To test, I ran a number of increasingly complex working and broken
 JSON examples.  The parser and lexer successfully catch when JSON is
 incorrectly formatted. To test memory, I used valgrind to check for
 leaks under circumstances when the program terminates.  The parser
 generated by Bison does not garbage collect memory required by the
-stack or some other internal functions on exit, so if 3 blocks are not
-freed on exit this is acceptable.  Any more, and there is a problem
-with memory management.  The program does not leak additional memory,
-under any circumstances.
+parse stack or a couple other internal functions on exit, so if 3
+blocks are not freed on exit this is acceptable.  Any more, and there
+is a problem with memory management.  The program does not leak
+additional memory under any circumstances.\par
+Some basic tests are included in the test directory, along with a
+script to easily run more tests.  The process for creating and running
+tests is explained in the README.
+
 \pagebreak
 \bibliographystyle{plain}
 \bibliography{jxmlbib}
